# Dr.Strage_App

./: README.md
Code/: CMakeLists.txt  CMakeLists.txt.user.04a042f  CMakeLists.txt.user.410572e  CMakeLists.txt.user.76b63d1  CMakeLists.txt.user.ac8c088  CMakeLists.txt.user.e3ef164  CheckValidEmail.h  CheckValidPassword.h  CheckValidPhone.h  DoctorModel.h  DoctorsModel.h  PatientsModel.h  UserLogIn.h  UserLoginModel.h  UserSystemAdminModel.h  add_new_patient_ui.cpp  add_new_patient_ui.h  add_new_patient_ui.ui  adminmainwindow.cpp  adminmainwindow.h  adminmainwindow.ui  appointments.cpp  appointments.h  appointments.ui  databaseController.h  doctor_main.cpp  doctor_main.h  doctor_main.ui  doctormainwindow.cpp  doctormainwindow.h  doctormainwindow.ui  hospitalAdminModel.h  hospitaladminmain.cpp  hospitaladminmain.h  hospitaladminmain.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patientupdate.cpp  (+8 more)
Code/Resources/: Resources.qrc
